--- a/v1/index.html
+++ b/v1/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link href="style.css" rel="stylesheet" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
     <div class="container">
@@ -94,7 +95,7 @@
         </aside>
 
         <section>
-          <ul>
+          <ul class="facts-list">
             <li class="fact">
               <p>
                 React is being developed by Meta (formerly facebook)
